// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@/compontent/posters/as-figure.vue Renders a new poster 1`] = `
<figure
  class="poster"
  is_new="true"
>
  <icon-stub
    name="working"
  />
   
  <as-svg-stub
    poster="[object Object]"
  />
   
  <figcaption>
    <!---->
     
    <poster-menu-stub
      is_new="true"
    />
  </figcaption>
</figure>
`;

exports[`@/compontent/posters/as-figure.vue Renders a poster 1`] = `
<figure
  class="poster"
>
  <icon-stub
    name="working"
  />
   
  <as-svg-stub
    itemid="/+16282281824/posters/559666932867"
  />
   
  <figcaption>
    <!---->
     
    <!---->
  </figcaption>
</figure>
`;
